Rework command building a little bit.
Separate "build the command array" from "preparing command for execution
under a shell". The first one is more suitable for usage with Runtime.exec()
and ProcessBuilder, while the latter is targeted at servicing the shell
scripts shipped with Spark.